app/assets/stylesheets/main.scss
@import "colors";
@import "comments";
@import "calendar";
body {
}
/* FONTS */
@import url(https://fonts.googleapis.com/css?family=Montserrat);
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800);



/* TYPOGRAPHY */

$primary-font: 'Montserrat', Arial, sans-serif;
$secondary-font: "Open Sans", Arial, sans-serif;

/* Headers */
h1 {
  color: $typography;
    font-family: $primary-font;
    font-size: 38px;
    letter-spacing: 1px;
    text-transform: uppercase;
}
h2{
  color: $typography;
    font-family: $primary-font;
    font-size: 30px;
}
h3{
  color: $typography;
  font-family: $secondary-font;
    font-size: 26px;
}
h4{
  color: $typography;
  font-family: $secondary-font;
    font-size: 20px;
}
h5{
  color: $typography;
  font-family: $secondary-font;
    font-size: 16px;
    text-transform: uppercase;
}
h6{
  color: $typography;
  font-family: $secondary-font;
    font-size: 14px;
    text-transform: uppercase;
}
p {
  color: $typography;
    font-family: $secondary-font;
    font-size: 14px;
}
small{
  font-size: 9px;
  padding: 5px 10px 10px 0px;
}


ul{
  color: $typography;
  font-family:  $secondary-font;
  font-size: 14px;
}
ol{
  color: $typography;
  font-family:  $secondary-font;
  font-size: 14px;
}
.input_label label{
  font-family: $secondary-font;
}

/* NAV BAR */
.top-bar {
  background: #fff;
  border-bottom: 1px solid #f5f5f5;
  .name {
      margin: .25em 0em 0em .75em;
    a{
      font-family: $primary-font;
      font-size: 1.5em;
      color: $promptlyblue;
      text-transform: uppercase;
    }
  }
}

.top-bar-section {
  font-weight: bold;
  li:not(.has-form) a:not(.button) {
    background: #fff;
    color: $promptlyblue;
    &:hover{
      background: $promptlyblue;
      color: #fff;
    }
  }
}

/* FOOTER */
.footer{
  border-top: 1px solid $lightgray;
  margin-top: 1em;
  margin-bottom: 5em;
  padding-top: 3em;
}

/* GENERAL */

hr{
  margin:0rem;
}
.pageTitle{
  margin-top: 2em;
  margin-bottom: 2em;
  input[type="text"]{
    font-size: 1em;
    height: 4rem;
    box-shadow: none;
    border-color: #fafafa;
  }
  p{
    color: $orange;
    font-size: .75em;
  }
}
fieldset{
  padding-bottom: .3rem;
  p{
    margin-bottom: .25em;
  }
  i{
    margin-right: .5em;
  }
}
legend{
  color: $typography;
  font-family: $secondary-font;
}

/* LANDING PAGE */
.landing{
  h1 {
    color: #fff;
  }

  h2 {
    color: $darkgray;
  }
}
.landing a:hover{
  border: none;
}

.day-op {
  .dropdown.button.landing-dropdown, button.dropdown.landing-dropdown {
    padding: 0em;
    font-size: 1.0em;
  }
}

#homepage-hero{
  background: asset-url('background2.png') no-repeat center center fixed;
}
.main-section{
  background: #fff;
  color: $promptlyblue;
  padding: 0em 1em 1em 1em;
  margin-bottom: 9em;
  margin-top: 4em;
  text-align: center;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px; /* future proofing */
  h2{
    color: $promptlyblue;
  }
  i{
    font-size: 10em;
  }
  &:hover{
    background: $promptlyblue;
    color: #fff;
    h2{
      color: #fff;
    }
  }

}
.learn-more-landing{
  height: 300px;
  background-image: asset-url('information_image.png');
}
/* https://www.flickr.com/photos/audiolucistore/14163042905/in/photolist-nzxidV-LaARx-cxUcBu-9uZpk3-5erWNG-6Jpuud-xsZh8-ovRNyN-ovMGNz-cu64t-bncE6P-hnZzLf-kXy2-bPMHr6-ao63dG-5AmR7f-5nRsb3-dQjSHb-6W49Xi-4YPqqU-72j5yj-7m7B7h-a42jmC-qCzR6b-sSF1Mq-7QpV8y-rrtnoF-4Mt8dp-isjzoi-fGXeu1-58jBvL-7vEVHQ-qcQE2T-e1wDLh-8RViG5-55yjt2-55R1Tu-ihgH2m-4wttVC-6225bv-q62zMt-68jpVn-qMU7aT-oHcbMi-2RF5eT-do8JT3-56eXRT-dV8sXM-6UT19W-7UNsX4*/
.browse-landing{
  height: 300px;
  background: #fff;
}
/*https://www.flickr.com/search/?license=4%2C5%2C6%2C9%2C10&advanced=1&text=book%20shelf*/
.new-plan-landing{
  height: 300px;
  background-image: asset-url('event_image.png');
}
/*https://www.flickr.com/photos/goincase/5227334827/in/photolist-8XVswx-e1H2wz-e1H3Kg-ekwWmw-e5EhXp-3JGb4Y-e5EgaK-8jQw3k-9WJkPJ-6CuXU3-8p1kRq-88McgK-gcNj9F-8ZYJNJ-gcGgk8-9pW7GC-mrmShP-aDNQjH-gcP8ca-dKuzK9-6Dzu4H-2WJec-e1H1D6-e1NDSL-fHj6iU-jxYo2D-iWV5n6-ooSDcT-ia8dgf-p6TSpU-e1H2je-78vw29-ohYFB2-dPVD1P-gcQMW3-88QqRf-88QqAh-6CrgKt-aDSDr5-9pQmVW-mrm52b-8ZYJgW-88McoD-gcP6qe-9pWMWy-9pTGHr-gcFJVb-8ZVCMi-9pPUQh-aokzW3*/

.secondary-section{
  margin-top: 5em;
  padding-bottom: 5em;
  table tr th, table tr td {
    padding: 0.5625rem 0.625rem;
    font-size: .75rem;
    color: $darkgray;
    text-align: left;
  }
  .asset_table {
    display: none;
  }

  .day-plans {
    background: $promptlyblue;
    padding: .25em;
  }

  .day-alert {
    background: $orange;
  }

  .day-normal {
    background: $promptlyblue;
  }

  .new-comment-area {
    display: none;
  }
  table{
    border: none;
  }
  table tr.even, table tr.alt, table tr:nth-of-type(even) {
    // background: #fff;
  }
  table thead{
    background: #fff;
  }
  .has-tip{
    font-size: 1.75em;
    border: none;
    color: #fff;
  }

  .welcome-text {
    margin-top: 1.0em;
  }

}
.calendar-header{
  font-family: $primary-font;
  font-size: 1.5em;
  line-height: 1em;
  padding-bottom: .5em;
  a{
    color: $darkgray;
    &:hover{
      background: none;
    }
  }
}

/* NEW EVENT */
.new-event{
  margin-bottom: 5em;
}
.new-event h6{
  font-weight: bold;
}
.new-event-info{
  margin-top: 2em;
  border: 1px solid #E6E7E8;
  padding: 1em;
}
.new-event-info h6{
  background: #fff;
  padding: .25em;
  margin-top: -2.1em;
}
.operational-period{
  border-top: 5px solid #eee;
  border-bottom: 5px solid #eee;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}
fieldset{
  margin: 0em 0em 1.5em 0em;
  padding-top: .5rem;
  padding-bottom: .75rem;
}
.plan-action{
  margin-top: 2em;
  margin-bottom: 2em;
  padding-top: 3rem;
  padding-bottom: 0rem;

  input[type=submit] {
    text-transform: uppercase;
  }
}
.footer-back{
  margin-bottom: 4em;
}

.breadcrumb {
  list-style: none;
  overflow: hidden;
  font: 18px Helvetica, Arial, Sans-Serif;
}
.breadcrumb li {
  float: left;
}
.breadcrumb li a {
  color: white;
  height: 50px;
  text-decoration: none;
  padding: 14px 0 10px 50px;
  background: $mediumgray;
  position: relative;
  display: block;
  float: left;
}
.breadcrumb li a:after {
  content: " ";
  display: block;
  width: 0;
  height: 0;
  border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
  border-bottom: 50px solid transparent;
  border-left: 30px solid $mediumgray;
  position: absolute;
  top: 50%;
  margin-top: -50px;
  left: 100%;
  z-index: 2;
  &.active {
    border-left: 30px solid #f19b3b;
  }
  &.approved {
    content: none;
    color: pink;
  }
}
.breadcrumb li a:before {
  content: " ";
  display: block;
  width: 0;
  height: 0;
  border-top: 50px solid transparent;
  border-bottom: 50px solid transparent;
  border-left: 30px solid white;
  position: absolute;
  top: 50%;
  margin-top: -50px;
  margin-left: 1px;
  left: 100%;
  z-index: 1;
}
#users_table, #first_aid_table, #mobile_team_table, #transport_table, #dispatch_table{
  border: none;
  thead tr th{
    color: $mediumgray;
    font-weight: normal;
    padding: 0rem 0.625rem 0rem;
  }
  thead{
    background: none;
    color: $mediumgray;
    font-weight: normal;
  }
}

.tabs dd.active a, .tabs .tab-title.active a {
  background-color: #FFF;
  color: $darkgray;
  border-bottom: none;
  border-right: 2px solid $lightgray;
  border-top: 2px solid $lightgray;
  border-left: 2px solid $lightgray;
}
.tabs dd > a:hover, .tabs .tab-title > a:hover {
  background-color: #fafafa;
}
.tabs dd > a, .tabs .tab-title > a {
  background-color: #FFF;
  color: $mediumgray;
  font-family: $primary-font;
  border-bottom: 2px solid $lightgray;
  text-transform: uppercase;
  margin: 2em 0em 1.5em 0em;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
}
#planAgreement{
  .plan-accepted{
    color: #43AC6A;
    font-weight: bold;
  }
}

/* PLAN ARCHIVE */
.plan-archive{
  margin-top: 2em;
  button, .button{
    margin: 0rem;
  }
}
.side-nav{
  background: #eee;
  h5{
    margin-top: .75rem;
    margin-bottom: .25rem;
  }
  i{
    margin-left: .5em;
    margin-right: .35em;
  }
  li{
    margin-bottom: 1rem;
  }
}
.plan-archive a{
  color: $promptlyblue;
  text-decoration: underline;
  font-weight: bolder;
}
.plan-archive a:visited{
  color: $promptlyblue;
}
.plan-archive a:hover{
  border: none;
}
input[type="checkbox"]{
  margin: 0rem;
}


/* BUTTONS */
.button{
  background: #789fd3;
  color: #fff;
}

.button:hover {
  background: #789fd3;
  color: #FFF;
  border: none;
}
.button:focus {
  background: #f19b3b;
}
.button:link {
  color: #fff;
}
.source {
  float: right;
}

.plan_table {
  border: none;
  tr {
    &:hover {
      background: #eee;
    }
    .even {
      background: #eee;
    }
  }
}

.input_label {
  label {
    font-weight: bold;
    font-size: 1em;
    text-transform: uppercase;
  }
}

.plan_form {
  margin: 2em 0.5em 0em 0.5em;
}
.plan-state{
  .button{
    background: $mediumgray;
    line-height: 2.7em;
  }
}
.review {
  &.active {
    background: #f19b3b;
    &:after {
      border-left: 30px solid #f19b3b;
    }
  }
   &.accepted {
     border-right: 28px solid $mediumgray;
     &.active {
       border-right: 28px solid #f19b3b;
     }
     &:before, &:after {
       content: none;
     }
   }
}

#post-event-treatment-report {
  .plan-state {
    .button.post-event-treatment-report {
      background: #f19b3b;
    }
  }

  table {
    width: 100%;
  }
}

.map_container {
  padding: 6px;
  border-width: 1px;
  border-style: solid;
  border-color: #ccc #ccc #999 #ccc;
  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
}

/* For google maps and twitter bootstrap*/
.asset_map {
  width: 100%;
  height: 350px;
  margin-bottom: 20px;

  img {
    max-width: none;
  }
  label {
    width: auto;
    display:inline;
  }
}

.asset_map_legend {
  margin: 0px 0 10px;
  font-family: $secondary-font;
  text-transform: uppercase;
  font-weight: bold;
  color: #4d4d4d; // Matches label color

  span {
    display: inline-block;
    margin-left: 2em;
    padding-left: 4px;
    border-left: 1.5em solid #fff;
  }

  .marker_legend_firstaid {
    border-left-color: #ca0020;
  }
  .marker_legend_mobileteam {
    border-left-color: #0571b0;
  }
  .marker_legend_transport {
    border-left-color: #85048a;
  }
  .marker_legend_dispatch {
    border-left-color: #45403e;
  }
}

.hidden {
  display: none;
}

.reveal-modal-bg {
  position: fixed;
}

.operation-period-container {

  .tabs .tab-title > a {
    margin-bottom: 0
  }

  .content {
    padding: 2em;
    border: 2px solid #E6E7E8;
    border-top: none;
  }

}

div.input.radio_buttons {
  margin-top: 0.5rem;
}
.supplementary-document {
  margin-bottom: 1.5em;
}

/* Communication Plan */
#communication-plan{
  .input_label{
    margin-bottom: 2em; 
  }
  .input_label label {
      font-weight: normal;
      text-transform: none;
  }  
  .input{
    margin-bottom: 1em;
  }
  h2{
    margin-bottom: .5em;
  }
  .asset-comms{
    h3{
      border-top: 1px solid $lightgray;
      margin-top: .75em;
      margin-bottom: .75em;
      padding-top: .75em;
    }
    h4{
      font-weight: bold;
    }
  }
}

